# s_task

asm/: jump_riscv32_elf_gas.S  make_riscv32_elf_gas.S
include/: s_port_hpmicro.h  s_port_riscv.h  s_task.h
projects/hpmicro/: CMakeLists.txt  build_linux.sh  main.c
src/: s_port_hpmicro.inc.h  s_task.c
